[package]
name = "d_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
tokio-tungstenite = "0.24"
serde_json = "1"
anyhow = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
dotenv = "0.15.0"
